# gamegambit-sol

./: .env  .gitignore  Anchor.toml  README.md  authority-wallet.json  authority.json  package-lock.json  package.json  platform_wallet.json  test-config-only.ts  test-network.ts  test-nft-mint-only.ts  test-pinata-quick.ts  test-trophy-system.ts  trophy-gallery-epic.html  trophy-gallery.html  tsconfig.json  upload-diamond.ts  upload-trophies-fixed.ts  upload-trophies.ts  view-trophies.html
keys/: authority.json  player_a.json  player_b.json
programs/gamegambit/: Cargo.toml
programs/gamegambit/src/: lib.rs
src/config/: env.config.ts  trophy-uris.json
src/services/: nft-mint.service.ts  pinata-with-trophies.service.ts  pinata.service.ts
src/utils/: trophy-selector.ts
test-keys/: authority.json  match_id_counter.json  moderator.json  player_a.json  player_b.json
tests/: complete-flow-with-nft.test.ts  gamegambit.ts  pinata.test.ts
