[package]
name = "gamegambit"
version = "0.1.0"
description = "Game Gambit Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gamegambit"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "metadata"] }
mpl-token-metadata = { version = "5.1.0", features = ["serde"] }
