[package]
name = "gamegambit"
version = "0.1.0"
description = "Game Gambit — on-chain chess wager program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gamegambit"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = ["anchor-lang/anchor-debug"]

[dependencies]
anchor-lang = { version = "=0.31.1", features = ["init-if-needed"] }